[package]
name = "fibers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws", "multipart"] }
axum_typed_multipart = "0.16.0"
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.1"
rmpv = "1.3.0"
rosu-mods = { version = "0.3.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
